# Questarctica

./: .env.example  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  x.txt
ai/: llm.py
config/: env.py  host.py
crews/: Dockerfile  main.py  pyproject.toml
crews/quest_crew/: README.md  pyproject.toml
crews/quest_crew/src/quest_crew/: crew.py  main.py
crews/quest_crew/src/quest_crew/config/: agents.yaml  tasks.yaml
crews/src/crews/: github_to_todoist_crew.py
crews/src/crews/tools/todoist/: tools.py
integrations/ai/: config.py
integrations/ai/crewai/crews/: issue_manager_crew.py
integrations/github/: config.py
integrations/mongo/: config.py
integrations/todoist/: config.py  helpers.py
jobs/github/: config.py
jobs/github/employment/: push_issues.py
questarctica_crews/: README.md  pyproject.toml
questarctica_crews/src/questarctica_crews/: crew.py  main.py
scripts/jobs/github/: get-issues-and-push-to-mongo.sh  get-issues-and-push-to-todoist.sh
