[project]
name = "crews"
version = "0.1.0"
description = "This is a fastapi project, which is used to create a REST API for the crews of the Questarctica."
authors = [
    {name = "Siddhant Ota", email = "tothesip@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=0.114.0",
    "fastapi[standard]>=0.115.9",
]
