[project]
name = "questarctica_crews"
version = "0.1.0"
description = "questarctica-crews using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.117.1,<1.0.0"
]

[project.scripts]
questarctica_crews = "questarctica_crews.main:run"
run_crew = "questarctica_crews.main:run"
train = "questarctica_crews.main:train"
replay = "questarctica_crews.main:replay"
test = "questarctica_crews.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
